--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,15 +1,15 @@
-baseURL: "https://indietool.com"
+baseURL: "https://indietools.one"
 languageCode: "en-us"
-title: "indietool - Unified Domain Management"
+title: "indietools - Unified Domain Management"
 
 params:
-  description: "indietool: Unified domain management for indie developers. Manage domains across multiple registrars with a single CLI."
+  description: "indietools: Unified domain management for indie developers. Manage domains across multiple registrars with a single CLI."
   keywords: "domain management, indie developers, CLI, DNS, Cloudflare, Porkbun, Namecheap, GoDaddy"
   og_description: "Manage domains across multiple registrars with a single command-line interface."
   hero_subtitle: "Manage domains across multiple registrars from a single command-line interface. Built for indie builders who hate DNS chaos."
-  install_command: "go install github.com/indietool/cli@latest"
+  install_command: "go install github.com/indietools-one/cli@latest"
 
-copyright: "© 2025 indietool. Built for indie builders, by indie builders."
+copyright: "© 2025 indietools. Built for indie builders, by indie builders."
 
 menu:
   main:
