--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,6 +1,6 @@
 baseURL: "https://indietools.one"
 languageCode: "en-us"
-title: "indietools - Unified Domain Management"
+title: "Infrastructure, Unified."
 
 params:
   description: "indietools: Unified domain management for indie developers. Manage domains across multiple registrars with a single CLI."
@@ -25,7 +25,7 @@ menu:
     - name: "Docs"
       url: "#docs"
       weight: 40
-  
+
   footer:
     - name: "Documentation"
       url: "#docs"
