--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,15 +1,15 @@
-baseURL: "https://indietools.one"
+baseURL: "https://indietool.one"
 languageCode: "en-us"
 title: "Infrastructure, Unified."
 
 params:
-  description: "indietools: Unified domain management for indie developers. Manage domains across multiple registrars with a single CLI."
+  description: "indietool: Unified domain management for indie developers. Manage domains across multiple registrars with a single CLI."
   keywords: "domain management, indie developers, CLI, DNS, Cloudflare, Porkbun, Namecheap, GoDaddy"
   og_description: "Manage domains across multiple registrars with a single command-line interface."
   hero_subtitle: "Manage domains across multiple registrars from a single command-line interface. Built for indie builders who hate DNS chaos."
-  install_command: "go install github.com/indietools-one/cli@latest"
+  install_command: "go install github.com/indietool-one/cli@latest"
 
-copyright: "© 2025 indietools. Built for indie builders, by indie builders."
+copyright: "© 2025 indietool. Built for indie builders, by indie builders."
 
 menu:
   main:
@@ -19,9 +19,15 @@ menu:
     - name: "Providers"
       url: "#providers"
       weight: 20
+    - name: "Workflows"
+      url: "#workflows"
+      weight: 25
     - name: "Get Started"
       url: "#getting-started"
       weight: 30
+    - name: "FAQ"
+      url: "#faq"
+      weight: 35
     - name: "Docs"
       url: "#docs"
       weight: 40
@@ -30,6 +36,9 @@ menu:
     - name: "Documentation"
       url: "#docs"
       weight: 10
+    - name: "FAQ"
+      url: "#faq"
+      weight: 15
     - name: "GitHub"
       url: "#"
       weight: 20
